# repostats

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
src/: __init__.py  cli.py  github.py  tui.py
tests/: test_cli.py  test_github.py
